Fixed main method, fixed Java 9 module loading, fixed collection mapping